// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAllMembers fails when array values matches the members of the set 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeAllMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to not have all of the following members:
  <green>[2, 1, 3]</color>
Received:
  <red>[1, 2, 3]</color>"
`;

exports[`.toIncludeAllMembers fails when array values do not contain any of the members of the set 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following members:
  <green>[1, 2, 3]</color>
Received:
  <red>[4, 5, 6]</color>"
`;

exports[`.toIncludeAllMembers fails when expected object is not an array 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following members:
  <green>2</color>
Received:
  <red>[1, 2, 3]</color>"
`;

exports[`.toIncludeAllMembers fails when given object is not an array 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeAllMembers(</intensity><green>expected</color><dim>)</intensity>

Expected list to have all of the following members:
  <green>[1, 2, 3]</color>
Received:
  <red>2</color>"
`;
